[package]
name = "zigbee-cluster-library"
version = "0.1.0-alpha.1"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
edition = "2018"
rust-version = "1.31"

description = "ZigBee cluster library in `no-std` based on the [ZigBee Cluster Library Rev 6 Draft 1.0](https://zigbeealliance.org/wp-content/uploads/2019/12/07-5123-06-zigbee-cluster-library-specification.pdf)"
documentation = "https://docs.rs/zigbee-cluster-library"
repository = "https://github.com/thebino/zigbee-cluster-library"
readme = "README.md"
keywords = ["zigbee", "208.15.4", "cluster library"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.217", features = ["derive", "rc"] }

